force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Account__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>