force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>