force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Current_Limit__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Current_Limit__c</fullName>
    <label>Current Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>