force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Description__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>