force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Expiration_Month__c</fullName>
    <label>Expiration Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>