force-app/main/default/objects/telearndaypkg__Financial_Account__c/fields/telearndaypkg__Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>telearndaypkg__Expiration_Year__c</fullName>
    <label>Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>