force-app/main/default/objects/telearndaypkg__Financial_Account__c/listViews/telearndaypkg__All.listView-meta.xml
<ListView>
    <fullName>telearndaypkg__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>